# mb-applet-startup-monitor

./: Makefile.am  configure.ac  mbmonitor.c
data/: Makefile.am
